Markup completed, starting styling

--- a/index.html
+++ b/index.html
@@ -4,13 +4,123 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Jonathan Hoy Tech Challenge</title>
+	<title></title>
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Raleway:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
+	<header>
+		<div class="headerLinks wrapper">
+			<ul class="navLinks">
+				<li><a href="#navContact">Contact</a></li>
+				<li><a href="#navAbout">About</a></li>
+			</ul>
+			<ul class="socialLinks">
+				<li><a href="https://twitter.com/hackeryou" target="_blank"><i class="fab fa-twitter"></i></a></li>
+				<li><a href="https://www.instagram.com/thisishackeryou/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com/thisishackeryou/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+				<li><a href="https://hackeryou.com/" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
+			</ul>
+		</div>
+	</header>
+	<main class="wrapper">
+		<h1 class="title">HackerYou</h1>
+		<nav class="navUpper">
+			<ul>
+				<li><a href="https://hackeryou.com/" target="_blank">Home</a></li>
+				<li><a href="https://hackeryou.com/about" target="_blank">About</a></li>
+				<li><a href="https://hackeryou.com/contact" target="_blank">Contact</a></li>
+				<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
+				<li><a href="https://hackeryou.com/courses/web-development#courses" target="_blank">Part-Time</a></li>
+			</ul>
+		</nav>
+		<img src="./public/assets/image-main.png" alt="A wide angle image of a classroom full of students eager to learn web development skills.">
+	</main>
+	<section id="navAbout" class="wrapper">
+		<h2>About</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique vero labore perferendis illum fugit, accusamus cumque, ea saepe in quas placeat nihil iure, eum minima dolor consequuntur enim alias.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptatibus sint in hic quaerat, necessitatibus sit officia est beatae quia, placeat pariatur et aliquid commodi aut nemo labore quibusdam, alias.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit commodi, iusto quo. Illo quo id delectus soluta, commodi, saepe laboriosam. Quisquam placeat dolor consequatur eligendi tempora, dicta facilis, dignissimos quaerat!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis error quos earum non numquam aliquid modi eius culpa. Velit, saepe porro asperiores pariatur corporis quisquam ipsam nesciunt, minus. Nam, soluta!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consectetur et eveniet amet non molestias temporibus corporis quos, sit ad minima voluptate repellat maiores voluptates dicta vel voluptas asperiores sunt.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt et eum voluptas labore unde aperiam placeat excepturi suscipit est ex sint corporis harum vero, nobis sunt sed ab. Nobis, ullam?</p>
+	</section>
+	<section id="navGallery" class="wrapper gallery">
+		<h2>Gallery</h2>
+		<div class="imageGallery clearfix">
+			<figure>
+				<img src="./public/assets/image-1.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-2.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-3.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-4.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-5.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-6.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-7.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-8.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-9.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-10.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-11.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+			<figure>
+				<img src="./public/assets/image-12.png" alt="">
+				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
+			</figure>
+		</div>
+	</section>
+	<section id="navContact">
+		<h3>Subscribe to our newsletter</h3>
+		<form action="">
+			<label for="email"></label>
+			<input type="email" id="email" placeholder="email address">
+			<input type="submit" value="subscribe">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy.</p>
+		</form>
+		<nav class="navLower">
+			<ul>
+				<li><a href="https://hackeryou.com/" target="_blank">Home</a></li>
+				<li><a href="https://hackeryou.com/about" target="_blank">About</a></li>
+				<li><a href="https://hackeryou.com/contact" target="_blank">Contact</a></li>
+				<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
+				<li><a href="https://hackeryou.com/courses/web-development#courses" target="_blank">Part-Time</a></li>
+			</ul>
+		</nav>
+	</section>
+	<footer>
+		<p>&copy; 2018 <a href="https://hackeryou.com/" target="_blank">HackerYou</a></p>
+		<ul class="socialLinks">
+			<li><a href="https://twitter.com/hackeryou" target="_blank"><i class="fab fa-twitter"></i></a></li>
+			<li><a href="https://www.instagram.com/thisishackeryou/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			<li><a href="https://www.facebook.com/thisishackeryou/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+			<li><a href="https://hackeryou.com/" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
+		</ul>
+	</footer>
 
-	<h1>Hello 🌎🌎</h1>
-
-	<script src="public/scripts/main.js"></script>
 </body>
 </html>
