More base styling

--- a/index.html
+++ b/index.html
@@ -37,12 +37,20 @@
 		</nav>
 		<img src="./public/assets/image-main.png" alt="A wide angle image of a classroom full of students eager to learn web development skills.">
 	</main>
-	<section id="navAbout" class="wrapper">
-		<h2>About</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique vero labore perferendis illum fugit, accusamus cumque, ea saepe in quas placeat nihil iure, eum minima dolor consequuntur enim alias.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptatibus sint in hic quaerat, necessitatibus sit officia est beatae quia, placeat pariatur et aliquid commodi aut nemo labore quibusdam, alias.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit commodi, iusto quo. Illo quo id delectus soluta, commodi, saepe laboriosam. Quisquam placeat dolor consequatur eligendi tempora, dicta facilis, dignissimos quaerat!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis error quos earum non numquam aliquid modi eius culpa. Velit, saepe porro asperiores pariatur corporis quisquam ipsam nesciunt, minus. Nam, soluta!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consectetur et eveniet amet non molestias temporibus corporis quos, sit ad minima voluptate repellat maiores voluptates dicta vel voluptas asperiores sunt.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt et eum voluptas labore unde aperiam placeat excepturi suscipit est ex sint corporis harum vero, nobis sunt sed ab. Nobis, ullam?</p>
+	<section id="navAbout" class="wrapper about">
+		<div class="headerStyling">
+			<div class="lineBefore"><span></span></div>
+			<h2>About</h2>
+			<div class="lineAfter"><span></span></div>
+		</div>
+		<p class="columns">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique vero labore perferendis illum fugit, accusamus cumque, ea saepe in quas placeat nihil iure, eum minima dolor consequuntur enim alias.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptatibus sint in hic quaerat, necessitatibus sit officia est beatae quia, placeat pariatur et aliquid commodi aut nemo labore quibusdam, alias.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit commodi, iusto quo. Illo quo id delectus soluta, commodi, saepe laboriosam. Quisquam placeat dolor consequatur eligendi tempora, dicta facilis, dignissimos quaerat!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis error quos earum non numquam aliquid modi eius culpa. Velit, saepe porro asperiores pariatur corporis quisquam ipsam nesciunt, minus. Nam, soluta!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consectetur et eveniet amet non molestias temporibus corporis quos, sit ad minima voluptate repellat maiores voluptates dicta vel voluptas asperiores sunt.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt et eum voluptas labore unde aperiam placeat excepturi suscipit est ex sint corporis harum vero, nobis sunt sed ab. Nobis, ullam?</p>
 	</section>
 	<section id="navGallery" class="wrapper gallery">
-		<h2>Gallery</h2>
+		<div class="headerStyling">
+			<div class="lineBefore"><span></span></div>
+			<h2>Gallery</h2>
+			<div class="lineAfter"><span></span></div>
+		</div>
 		<div class="imageGallery clearfix">
 			<figure>
 				<img src="./public/assets/image-1.png" alt="">
