--- a/index.html
+++ b/index.html
@@ -24,89 +24,215 @@
 			</ul>
 		</div>
 	</header>
-	<main class="wrapper">
-		<h1 class="title">HackerYou</h1>
-		<nav class="navUpper">
-			<ul>
-				<li><a href="https://hackeryou.com/" target="_blank">Home</a></li>
-				<li><a href="https://hackeryou.com/about" target="_blank">About</a></li>
-				<li><a href="https://hackeryou.com/contact" target="_blank">Contact</a></li>
-				<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
-				<li><a href="https://hackeryou.com/courses/web-development#courses" target="_blank">Part-Time</a></li>
-			</ul>
-		</nav>
-		<img src="./public/assets/image-main.png" alt="A wide angle image of a classroom full of students eager to learn web development skills.">
-	</main>
-	<section id="navAbout" class="wrapper about">
-		<div class="headerStyling">
-			<div class="lineBefore"><span></span></div>
-			<h2>About</h2>
-			<div class="lineAfter"><span></span></div>
-		</div>
-		<div class="columns">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique vero labore perferendis illum fugit, accusamus cumque, ea saepe in quas placeat nihil iure, eum minima dolor consequuntur enim alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptatibus sint in hic quaerat, necessitatibus sit officia est beatae quia, placeat pariatur et aliquid commodi aut nemo labore quibusdam, alias.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit commodi, iusto quo. Illo quo id delectus soluta, commodi, saepe laboriosam. Quisquam placeat dolor consequatur eligendi tempora, dicta facilis, dignissimos quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			<p>Omnis error quos earum non numquam aliquid modi eius culpa. Velit, saepe porro asperiores pariatur corporis quisquam ipsam nesciunt, minus. Nam, soluta!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consectetur et eveniet amet non molestias temporibus corporis quos, sit ad minima voluptate repellat maiores voluptates dicta vel voluptas asperiores sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, iusto dolor dolores natus numquam sapiente.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt et eum voluptas labore unde aperiam placeat excepturi suscipit est ex sint corporis harum vero, nobis sunt sed ab. Nobis, ullam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit voluptates aliquid commodi ad nobis unde blanditiis, eligendi, omnis, culpa officiis voluptatibus accusantium aperiam facere quam suscipit dicta nesciunt perferendis vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, illo? Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat!</p>
-		</div>
-	</section>
-	<section id="navGallery" class="wrapper gallery">
-		<div class="headerStyling">
-			<div class="lineBefore"><span></span></div>
-			<h2>Gallery</h2>
-			<div class="lineAfter"><span></span></div>
-		</div>
-		<div class="imageGallery clearfix">
-			<figure>
-				<img src="./public/assets/image-1.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-2.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-3.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-4.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-5.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-6.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-7.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-8.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-9.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-10.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-11.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-			<figure>
-				<img src="./public/assets/image-12.png" alt="">
-				<figcaption>Lorem ipsum dolor sit amet.</figcaption>
-			</figure>
-		</div>
-	</section>
+	<div class="wrapper">
+		<main>
+			<h1 class="title">HackerYou</h1>
+			<nav class="navUpper">
+				<ul>
+					<li><a href="https://hackeryou.com/" target="_blank">Home</a></li>
+					<li><a href="https://hackeryou.com/about" target="_blank">About</a></li>
+					<li><a href="https://hackeryou.com/contact" target="_blank">Contact</a></li>
+					<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
+					<li><a href="https://hackeryou.com/courses/web-development#courses" target="_blank">Part-Time</a></li>
+				</ul>
+			</nav>
+			<img src="./public/assets/image-main.png" alt="A wide angle image of a classroom full of students eager to learn web development skills.">
+		</main>
+	</div>
+	<div class="wrapper">
+		<section id="navAbout" class="about">
+			<div class="headerStyling">
+				<div class="lineBefore"><span></span></div>
+				<h2>About</h2>
+				<div class="lineAfter"><span></span></div>
+			</div>
+			<div class="columns">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique vero labore perferendis illum fugit, accusamus cumque, ea saepe in quas placeat nihil iure, eum minima dolor consequuntur enim alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptatibus sint in hic quaerat, necessitatibus sit officia est beatae quia, placeat pariatur et aliquid commodi aut nemo labore quibusdam, alias.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit commodi, iusto quo. Illo quo id delectus soluta, commodi, saepe laboriosam. Quisquam placeat dolor consequatur eligendi tempora, dicta facilis, dignissimos quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				<p>Omnis error quos earum non numquam aliquid modi eius culpa. Velit, saepe porro asperiores pariatur corporis quisquam ipsam nesciunt, minus. Nam, soluta!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consectetur et eveniet amet non molestias temporibus corporis quos, sit ad minima voluptate repellat maiores voluptates dicta vel voluptas asperiores sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, iusto dolor dolores natus numquam sapiente.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt et eum voluptas labore unde aperiam placeat excepturi suscipit est ex sint corporis harum vero, nobis sunt sed ab. Nobis, ullam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit voluptates aliquid commodi ad nobis unde blanditiis, eligendi, omnis, culpa officiis voluptatibus accusantium aperiam facere quam suscipit dicta nesciunt perferendis vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, illo? Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat!</p>
+			</div>
+		</section>
+	</div>
+	<div class="wrapper">
+		<section id="navGallery" class="gallery">
+			<div class="headerStyling">
+				<div class="lineBefore"><span></span></div>
+				<h2>Gallery</h2>
+				<div class="lineAfter"><span></span></div>
+			</div>
+			<div class="imageGallery">
+				<figure>
+					<img src="./public/assets/image-1.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-4.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-7.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-10.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-2.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-5.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-8.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-11.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-3.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-6.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-9.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-12.png" alt="">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
+							</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+			</div>
+		</section>
+	</div>
 	<section id="navContact">
 		<h3>Subscribe to our newsletter</h3>
 		<form action="">
@@ -126,13 +252,15 @@
 		</nav>
 	</section>
 	<footer>
-		<p>&copy; 2018 <a href="https://hackeryou.com/" target="_blank">HackerYou</a></p>
-		<ul class="socialLinks">
-			<li><a href="https://twitter.com/hackeryou" target="_blank"><i class="fab fa-twitter"></i></a></li>
-			<li><a href="https://www.instagram.com/thisishackeryou/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			<li><a href="https://www.facebook.com/thisishackeryou/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-			<li><a href="https://hackeryou.com/" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
-		</ul>
+		<div class="wrapper">
+			<p>&copy; 2018 <a href="https://hackeryou.com/" target="_blank">HackerYou</a></p>
+			<ul class="socialLinks">
+				<li><a href="https://twitter.com/hackeryou" target="_blank"><i class="fab fa-twitter"></i></a></li>
+				<li><a href="https://www.instagram.com/thisishackeryou/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com/thisishackeryou/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+				<li><a href="https://hackeryou.com/" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
+			</ul>
+		</div>
 	</footer>
 
 </body>
