More styling and some refactoring

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
-	<header>
+	<header id="navHeader">
 		<div class="headerLinks wrapper">
 			<ul class="navLinks">
 				<li><a href="#navContact">Contact</a></li>
@@ -29,9 +29,9 @@
 			<h1 class="title">HackerYou</h1>
 			<nav class="navigation navUpper">
 				<ul>
-					<li><a href="https://hackeryou.com/" target="_blank">Home</a></li>
-					<li><a href="https://hackeryou.com/about" target="_blank">About</a></li>
-					<li><a href="https://hackeryou.com/contact" target="_blank">Contact</a></li>
+					<li><a href="#navHeader">Home</a></li>
+					<li><a href="#navAbout">About</a></li>
+					<li><a href="#navContact">Contact</a></li>
 					<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
 					<li><a href="https://hackeryou.com/courses/web-development#courses" target="_blank">Part-Time</a></li>
 				</ul>
@@ -63,7 +63,7 @@
 			</div>
 			<div class="imageGallery">
 				<figure>
-					<img src="./public/assets/image-1.png" alt="">
+					<img src="./public/assets/image-1.png" alt="Two students coding on their laptops.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -77,7 +77,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-4.png" alt="">
+					<img src="./public/assets/image-4.png" alt="HackerYou's front desk with t-shirts for sale.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -91,7 +91,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-7.png" alt="">
+					<img src="./public/assets/image-7.png" alt="Three HackerYou students collaborating on a project together. They are deep in discussion.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -105,7 +105,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-10.png" alt="">
+					<img src="./public/assets/image-10.png" alt="A HackerYou student is coding on her laptop while another student is watching.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -119,7 +119,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-2.png" alt="">
+					<img src="./public/assets/image-2.png" alt="A picture of multiple HackerYou students and staff working quietly.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -133,7 +133,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-5.png" alt="">
+					<img src="./public/assets/image-5.png" alt="A classroom full of HackerYou students with their laptops listening to their instructor.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -147,7 +147,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-8.png" alt="">
+					<img src="./public/assets/image-8.png" alt="HackerYou CEO Heather Payne is presenting to a full classroom of HackerYou students.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -161,7 +161,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-11.png" alt="">
+					<img src="./public/assets/image-11.png" alt="Multiple HackerYou students in class listening attentively to their instructor.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -175,7 +175,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-3.png" alt="">
+					<img src="./public/assets/image-3.png" alt="Two HackerYou students sitting on a couch and working.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -189,7 +189,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-6.png" alt="">
+					<img src="./public/assets/image-6.png" alt="A picture of HackerYou's common space with some students in discussion and other students working.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -203,7 +203,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-9.png" alt="">
+					<img src="./public/assets/image-9.png" alt="An empty classroom at HackerYou.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -217,7 +217,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img src="./public/assets/image-12.png" alt="">
+					<img src="./public/assets/image-12.png" alt="Four HackerYou students sitting at a long table coding on their laptops.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
@@ -244,9 +244,9 @@
 	</section>
 	<nav class="navigation navLower">
 		<ul>
-			<li><a href="https://hackeryou.com/" target="_blank">Home</a></li>
-			<li><a href="https://hackeryou.com/about" target="_blank">About</a></li>
-			<li><a href="https://hackeryou.com/contact" target="_blank">Contact</a></li>
+			<li><a href="#navHeader">Home</a></li>
+			<li><a href="#navAbout">About</a></li>
+			<li><a href="#navContact">Contact</a></li>
 			<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
 			<li><a href="https://hackeryou.com/courses/web-development#courses" target="_blank">Part-Time</a></li>
 		</ul>
@@ -265,5 +265,12 @@
 		</div>
 	</footer>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
+	<script>
+		$(() => {
+			$('.navigation a').smoothScroll();
+		})
+	</script>
 </body>
 </html>
